// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    classes={
      Object {
        "card": "card",
        "cardNoPadding": "cardNoPadding",
        "shadow0": "shadow0",
        "shadow1": "shadow1",
        "shadow2": "shadow2",
        "shadow3": "shadow3",
        "shadow4": "shadow4",
        "shadow5": "shadow5",
        "shadow6": "shadow6",
      }
    }
    shadow={3}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "card shadow3",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "card shadow3",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card styles matches the snapshot 1`] = `
Object {
  "card": Object {
    "background": "#ffffff",
    "borderRadius": "5px",
    "padding": "30px 20px",
  },
  "cardNoPadding": Object {
    "extend": "card",
    "padding": "0",
  },
  "shadow0": Object {
    "boxShadow": undefined,
  },
  "shadow1": Object {
    "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.05)",
  },
  "shadow2": Object {
    "boxShadow": "0 1px 8px rgba(0, 0, 0, 0.05)",
  },
  "shadow3": Object {
    "boxShadow": "0 1px 10px rgba(0, 0, 0, 0.1)",
  },
  "shadow4": Object {
    "boxShadow": "0 1px 14px rgba(0, 0, 0, 0.1)",
  },
  "shadow5": Object {
    "boxShadow": "0 1px 18px rgba(0, 0, 0, 0.1)",
  },
  "shadow6": Object {
    "boxShadow": "0 6px 32px rgba(0, 0, 0, 0.1)",
  },
}
`;

exports[`CardJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Card)
    shadow={3}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "card": "Card-card-0-1-1",
        "cardNoPadding": "Card-cardNoPadding-0-1-2",
        "shadow0": "Card-shadow0-0-1-3",
        "shadow1": "Card-shadow1-0-1-4",
        "shadow2": "Card-shadow2-0-1-5",
        "shadow3": "Card-shadow3-0-1-6",
        "shadow4": "Card-shadow4-0-1-7",
        "shadow5": "Card-shadow5-0-1-8",
        "shadow6": "Card-shadow6-0-1-9",
      },
      "shadow": 3,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "card": "Card-card-0-1-1",
          "cardNoPadding": "Card-cardNoPadding-0-1-2",
          "shadow0": "Card-shadow0-0-1-3",
          "shadow1": "Card-shadow1-0-1-4",
          "shadow2": "Card-shadow2-0-1-5",
          "shadow3": "Card-shadow3-0-1-6",
          "shadow4": "Card-shadow4-0-1-7",
          "shadow5": "Card-shadow5-0-1-8",
          "shadow6": "Card-shadow6-0-1-9",
        },
        "shadow": 3,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
